Hide table caption

--- a/src/main/resources/templates/admin_home.html
+++ b/src/main/resources/templates/admin_home.html
@@ -12,7 +12,7 @@
 <main class="container-fluid">
   <h2>Drinks - Overview</h2>
   <table class="table table-dark table-striped table-responsive">
-    <caption>Drinks Overview</caption>
+    <caption hidden>Drinks Overview</caption>
     <thead>
     <tr>
       <th scope="col">ID</th>
