--- a/src/main/resources/templates/fragments/admin_navbar.html
+++ b/src/main/resources/templates/fragments/admin_navbar.html
@@ -14,10 +14,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="/admin/simple">Simple Drinks</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/admin/complex">Complex Drinks</a>
+          <a class="nav-link" href="/admin/complex/new">New Complex Drink</a>
         </li>
       </ul>
     </div>
