--- a/src/main/resources/templates/fragments/admin_navbar.html
+++ b/src/main/resources/templates/fragments/admin_navbar.html
@@ -7,12 +7,16 @@
 <nav th:fragment="admin_navbar" class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
     <a href="/admin" class="navbar-brand">SW Barmanagement - Admin-Console</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false"
             aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" href="/admin/simple/drinks-on-demand">Drinks On Demand</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link" href="/admin/complex/new">New Complex Drink</a>
         </li>
