--- a/src/main/resources/templates/admin_drinks-on-demand.html
+++ b/src/main/resources/templates/admin_drinks-on-demand.html
@@ -18,6 +18,7 @@
       <th scope="col">Name</th>
       <th scope="col">Producer</th>
       <th scope="col">Description</th>
+      <th scope="col"></th>
     </tr>
     </thead>
     <tbody>
@@ -25,6 +26,7 @@
       <td th:text="${article.getName()}"></td>
       <td th:text="${article.getProducer()}"></td>
       <td th:text="${article.getDescription()}"></td>
+      <td><a th:href="'/admin/simple/' + ${article.getArtId()}" class="btn btn-primary">Edit</a></td>
     </tr>
     </tbody>
   </table>
