--- a/src/main/resources/templates/admin_complex.html
+++ b/src/main/resources/templates/admin_complex.html
@@ -49,6 +49,10 @@
     </div>
   </form>
   <br>
+  <form th:action="@{'/admin/complex/' + ${drinkId} + '/delete'}" method="post">
+    <button type="submit" class="btn btn-danger">Delete</button>
+  </form>
+  <br>
   <div class="alert alert-success alert-dismissible fade show" role="alert" th:hidden="!${saved}">
     <p>Saved successfully!</p>
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
