--- a/src/main/resources/templates/admin_home.html
+++ b/src/main/resources/templates/admin_home.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <title>SW Barmanagement - Admin-Console</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
   <link rel="stylesheet" th:href="@{/styles/default.css}">
@@ -10,7 +10,7 @@
 <body>
 <header th:insert="fragments/admin_navbar :: admin_navbar"></header>
 <main class="container-fluid">
-  <h2>Drinks - Overview</h2>
+  <h2>Available Drinks - Overview</h2>
   <table class="table table-dark table-striped table-responsive">
     <caption hidden>Drinks Overview</caption>
     <thead>
@@ -25,7 +25,7 @@
     <tr th:each="drink: ${simpleDrinks}">
       <td th:text="${drink.getId()}"></td>
       <td th:text="${drink.getName()}"></td>
-      <td th:text="${drink.getStock()} != null ? ${drink.getStock()} : 0"></td>
+      <td th:text="${drink.getStock()}"></td>
       <td><a th:href="'/admin/simple/' + ${drink.getId()}" class="btn btn-primary">Edit</a></td>
     </tr>
     <tr th:each="drink: ${complexDrinks}">
