--- a/src/main/resources/templates/fragments/admin_navbar.html
+++ b/src/main/resources/templates/fragments/admin_navbar.html
@@ -15,7 +15,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="/admin/simple/drinks-on-demand">Drinks On Demand</a>
+          <a class="nav-link" href="/admin/drinks-on-demand">Drinks On Demand</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/admin/complex/new">New Complex Drink</a>
