--- a/src/main/resources/templates/admin_drinks-on-demand.html
+++ b/src/main/resources/templates/admin_drinks-on-demand.html
@@ -30,6 +30,8 @@
     </tr>
     </tbody>
   </table>
+  <br>
+  <a href="/admin/drinks-on-demand/order" class="btn btn-light">Order</a>
 </main>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
