--- a/src/main/resources/templates/fragments/admin_navbar.html
+++ b/src/main/resources/templates/fragments/admin_navbar.html
@@ -20,6 +20,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/admin/complex/new">New Complex Drink</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/admin/replenishment">Replenishment</a>
+        </li>
       </ul>
     </div>
   </div>
