--- a/src/main/resources/templates/fragments/bar_navbar.html
+++ b/src/main/resources/templates/fragments/bar_navbar.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <title>Admin-Navbar</title>
+  <title>Bar-Navbar</title>
 </head>
 <body>
-<nav th:fragment="admin_navbar" class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav th:fragment="bar_navbar" class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a href="/admin" class="navbar-brand">SW Barmanagement - Admin-Console</a>
+    <a href="/" class="navbar-brand">SW Barmanagement</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false"
             aria-label="Toggle navigation">
@@ -14,18 +14,10 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link" href="/admin/drinks-on-demand">Drinks On Demand</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/admin/complex/new">New Complex Drink</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/admin/replenishment">Replenishment</a>
-        </li>
+        <!-- Currently no items to display -->
       </ul>
       <div class="d-flex">
-        <a href="/" class="btn btn-outline-light">Home</a>
+        <a href="/admin" class="btn btn-outline-light">Admin-Console</a>
       </div>
     </div>
   </div>
