--- a/src/main/resources/templates/fragments/bar_navbar.html
+++ b/src/main/resources/templates/fragments/bar_navbar.html
@@ -14,7 +14,9 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <!-- Currently no items to display -->
+        <li class="nav-item">
+          <a class="nav-link" href="/recipe-book">Recipe Book</a>
+        </li>
       </ul>
       <div class="d-flex">
         <a href="/admin" class="btn btn-outline-light">Admin-Console</a>
