--- a/src/main/resources/templates/fragments/bar_navbar.html
+++ b/src/main/resources/templates/fragments/bar_navbar.html
@@ -17,6 +17,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/recipe-book">Recipe Book</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/coupon/redeem">Redeem Coupon</a>
+        </li>
       </ul>
       <div class="d-flex">
         <a href="/admin" class="btn btn-outline-light">Admin-Console</a>
