--- a/src/main/resources/templates/bar_recipe-book.html
+++ b/src/main/resources/templates/bar_recipe-book.html
@@ -11,11 +11,17 @@
 <header th:insert="fragments/bar_navbar :: bar_navbar"></header>
 <main class="container-fluid">
   <h2>Available Drink Recipes</h2>
-  <div class="list-group list-group-flush">
-    <a th:each="drink: ${drinksWithRecipe}" class="list-group-item list-group-item-action list-group-item-dark"
-       data-bs-toggle="collapse" th:href="'#recipe-' + ${drink.getId()}" role="button" aria-expanded="false">
-      <span th:text="${drink.getName()}"></span>
-      <div class="collapse" th:id="'recipe-' + ${drink.getId()}">
+  <div class="accordion-flush" id="recipe-book">
+    <div th:each="drink: ${drinksWithRecipe}" class="accordion-item">
+      <h3 class="accordion-header" th:id="'recipe-' + ${drink.getId()}">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                th:data-bs-target="'#recipe-collapse-' + ${drink.getId()}" aria-expanded="false"
+                th:aria-controls="'recipe-collapse-' + ${drink.getId()}">
+          <span th:text="${drink.getName()}"></span>
+        </button>
+      </h3>
+      <div class="accordion-collapse collapse" th:id="'recipe-collapse-' + ${drink.getId()}"
+           th:aria-labelledby="'recipe-' + ${drink.getId()}" data-bs-parent="#recipe-book">
         <div class="card card-body bg-info" th:object="${drink.recipe}">
           <div th:switch="*{notes != null && notes.length() > 0}">
             <span th:case="${true}"><strong>Notes: </strong><span th:text="*{notes}"></span></span>
@@ -36,7 +42,7 @@
           </div>
         </div>
       </div>
-    </a>
+    </div>
   </div>
 </main>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
