Created page to see drink orders

--- a/src/main/resources/templates/fragments/bar_navbar.html
+++ b/src/main/resources/templates/fragments/bar_navbar.html
@@ -18,6 +18,9 @@
           <a class="nav-link" href="/recipe-book">Recipe Book</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="/order">Orders</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="/coupon/redeem">Redeem Coupon</a>
         </li>
       </ul>
