Created page to save new drink orders

--- a/src/main/resources/templates/bar_order-overview.html
+++ b/src/main/resources/templates/bar_order-overview.html
@@ -11,6 +11,10 @@
 <header th:insert="fragments/bar_navbar :: bar_navbar"></header>
 <main class="container-fluid">
   <h2>Order Overview</h2>
+  <div>
+    <a href="/order/new" class="btn btn-outline-success">New Order</a>
+  </div>
+  <br>
   <div class="card text-white bg-dark mb-3">
     <div class="card-body">
       <strong class="card-title">Total Revenue</strong>
