Added logout button to navbars

--- a/src/main/resources/templates/fragments/admin_navbar.html
+++ b/src/main/resources/templates/fragments/admin_navbar.html
@@ -25,7 +25,8 @@
         </li>
       </ul>
       <div class="d-flex">
-        <a href="/" class="btn btn-outline-light">Home</a>
+        <a href="/" class="btn btn-outline-light mx-2">Home</a>
+        <div th:insert="fragments/logout_button :: logout_button" class="mx-2"></div>
       </div>
     </div>
   </div>
