--- a/src/main/resources/templates/fragments/bar_navbar.html
+++ b/src/main/resources/templates/fragments/bar_navbar.html
@@ -25,7 +25,8 @@
         </li>
       </ul>
       <div class="d-flex">
-        <a href="/admin" class="btn btn-outline-light">Admin-Console</a>
+        <a href="/admin" class="btn btn-outline-light mx-2">Admin-Console</a>
+        <div th:insert="fragments/logout_button :: logout_button" class="mx-2"></div>
       </div>
     </div>
   </div>
