--- a/src/main/resources/templates/fragments/bar_navbar.html
+++ b/src/main/resources/templates/fragments/bar_navbar.html
@@ -14,13 +14,13 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
+        <li sec:authorize="hasRole('BAR_USER') or hasRole('BAR_ADMIN')" class="nav-item">
           <a class="nav-link" href="/recipe-book">Recipe Book</a>
         </li>
-        <li class="nav-item">
+        <li sec:authorize="hasRole('BAR_USER') or hasRole('BAR_ADMIN')" class="nav-item">
           <a class="nav-link" href="/order">Orders</a>
         </li>
-        <li class="nav-item">
+        <li sec:authorize="hasRole('BAR_USER') or hasRole('BAR_ADMIN')" class="nav-item">
           <a class="nav-link" href="/coupon/redeem">Redeem Coupon</a>
         </li>
       </ul>
