--- a/src/main/resources/static/styles/default.css
+++ b/src/main/resources/static/styles/default.css
@@ -1,10 +1,16 @@
 body {
-    height: 100vh;
     display: flex;
     flex-direction: column;
+    min-height: 100vh;
+}
+
+header {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
 }
 
 main {
+    flex-grow: 1;
     background-color: gray;
-    height: 100%;
 }
