--- a/src/main/resources/templates/admin/admin_complex.html
+++ b/src/main/resources/templates/admin/admin_complex.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <title>SW Barmanagement - Admin-Console</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
   <link rel="stylesheet" th:href="@{/styles/default.css}">
@@ -49,7 +49,7 @@
     </div>
   </form>
   <br>
-  <form th:action="@{'/admin/complex/' + ${drinkId} + '/delete'}" method="post">
+  <form th:action="@{'/admin/complex/' + ${drink.id} + '/delete'}" method="post" th:hidden="!${deletable}">
     <button type="submit" class="btn btn-danger">Delete</button>
   </form>
   <br>
